--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>再次修改 title 3次</title>
+  <link rel="stylesheet" href="all.css">
 </head>
 
 <body>
